<resources>
    <string name="app_name">Timee</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_progress_bar">Տվյալները ներբեռնվւմ են</string>
    <string name="label_favorites">Նախընտրելիները</string>
    <string name="reset_settings">Դուք ցանկանու՞մ եք զրոյացնել կարգավորումները</string>
    <string name="contact_us">Դուք կարող եք հաղորդագրություն ուղարկել մեր թիմին։ Մենք ուրախ ենք պատասխանելու ձեր հարցերին։</string>
    <string name="all">Բոլորը</string>
    <string name="human">Մարդը</string>
    <string name="unknown">Անհայտ</string>
    <string name="tab">Առօրյա</string>
    <string name="tab1">Առօրյա</string>
    <string name="tab2">Առօրյա</string>
    <string name="tab3">Առօրյա</string>
    <string name="register">Գրանցում</string>
    <string name="content_register">Գործողությունը կատարելու համար հարկավոր է գրանցվել:</string>
    <string name="content2_register">Գրանցումը կտևի ընդամենը 3 րոպե։</string>
    <string name="name">Անուն</string>
    <string name="surname">Ազգանուն</string>
    <string name="phone_number">Բջջային հեռախոսահամար</string>
    <string name="confirm">Հաստատել</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="all_fragment">Բոլորը</string>
    <string name="human_fragment">Մարդը</string>
    <string name="unknown_fragment">Անհայտ</string>
    <string name="facebook_app_id">275785176345144</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registration">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
