<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.activities.TransactionSearchActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction = "ifRoom"
        android:title="Որոնել"

        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/human"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/unknown"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/tab"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings4"
        android:orderInCategory="100"
        android:title="@string/tab1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings5"
        android:orderInCategory="100"
        android:title="@string/tab2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings6"
        android:orderInCategory="100"
        android:title="@string/tab3"
        app:showAsAction="never" />

</menu>
